--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 body {
-    background-color: black;
+    background-color: #3f3851;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
